--- a/card.css
+++ b/card.css
@@ -1,7 +1,91 @@
-.card
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 5px;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.card {
+    background-color: white;
+    width: 300px;
+    border-radius: 8px;
+    margin: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-star {
+    font-size: 16px;
+    color: gold;
+    margin-bottom: 10px;
+}
+
+.card-image img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.card-description {
+    font-size: 14px;
+    color: #555;
+    margin-top: 10px;
+}
+
+.card-desconto {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px;
+    font-size: 14px;
+    color: #777;
+    width: 100%; 
+    text-decoration: line-through;
+}
+
+.card-price 
 {
-    border: 2px solid #CCCCCC;
-    width: 250px;
-    height: 550px;
-    background-color: #ffff00;
+    display: flex;
+    justify-content: start;
+    margin: 5px;
+    font-size: 17px;
+    color: #e74c3c;
+    font-weight: bold;
+    margin-top: 10px;
+    width: 100%
+     
+}
+
+.desconto
+{
+margin-left: 20px;
+background-color: #e74c3c;
+color: white;
+border-radius: 10px;
+}
+
+.card-parcelamento {
+    font-size: 14px;
+    color: #555;
+    margin-top: 10px;
+    justify-content: space-between;
+}
+
+.card-buttom-buy button {
+    background-color: #e74c3c;
+    color: white;
+    padding:20px;
+    font-size: 16px;
+    border-radius: 4px;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.card-buttom-buy button:hover {
+    background-color: #c0392b;
 }
