--- a/card.css
+++ b/card.css
@@ -5,6 +5,7 @@ body {
     padding: 5px;
     justify-content: center;
     align-items: center;
+    display: flex;
    
 }
 
@@ -16,20 +17,23 @@ body {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
 }
 
-.card-star {
+.card-star
+{
+    display: flex;
     font-size: 16px;
     color: gold;
     margin-bottom: 10px;
+    justify-content: end;
 }
 
-.card-image img {
-    width: 150px;
-    height: 150px;
+.card-image {
     object-fit: cover;
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
 }
 
 .card-description {
@@ -41,11 +45,12 @@ body {
 .card-desconto {
     display: flex;
     justify-content: space-between;
-    margin: 5px;
+    margin: 8px;
     font-size: 14px;
     color: #777;
     width: 100%; 
     text-decoration: line-through;
+
 }
 
 .card-price 
@@ -53,11 +58,12 @@ body {
     display: flex;
     justify-content: start;
     margin: 5px;
-    font-size: 17px;
+    font-size: 20px;
     color: #e74c3c;
     font-weight: bold;
     margin-top: 10px;
-    width: 100%
+    width: 100%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
      
 }
 
@@ -67,6 +73,7 @@ margin-left: 20px;
 background-color: #e74c3c;
 color: white;
 border-radius: 10px;
+font-size: 15px;
 }
 
 .card-parcelamento {
@@ -86,6 +93,14 @@ border-radius: 10px;
     margin-top: 20px;
 }
 
+
 .card-buttom-buy button:hover {
-    background-color: #c0392b;
+    background-color: #eb786b;
+    color: white;
+    padding:20px;
+    font-size: 16px;
+    border-radius: 4px;
+    width: 100%;
+    margin-top: 20px;
 }
+
